# clean_code

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/application/: Cargo.toml
src/domain/: Cargo.toml
src/infrastructure/: Cargo.toml
src/presentation/: Cargo.toml
